[package]
name = "ecdump"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ecatm"

[[bin]]
name = "ecats"

[workspace]
members = ["router"]

[dependencies]
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
ethercrab = "0.6.0"
etherparse = "0.19.0"
fern = { version = "0.7.1", features = ["colored"] }
heapless = "0.9.2"
log = "0.4.29"
netdev = "0.40.0"
pcap-file = "2.0.0"
pnet = "0.35.0"
signal-hook = "0.4.1"
smol = "2.0.2"
tokio = { version = "1.49.0", features = ["full"] }
