[package]
name = "ecdump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
ctrlc = "3.5.1"
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.29"
netdev = "0.40.0"
pcap-file = "2.0.0"
pnet = "0.35.0"
ratatui = "0.29.0"
smallvec = "1.15.1"
